# lvfs-core

./: .gitignore  CMakeLists.txt
cmake/: FindLvfs-Core.cmake
src/: lvfs_core_IEditor.cpp  lvfs_core_IEditor.h  lvfs_core_IMainView.cpp  lvfs_core_IMainView.h  lvfs_core_INode.cpp  lvfs_core_INode.h  lvfs_core_INodeFactory.cpp  lvfs_core_INodeFactory.h  lvfs_core_IView.cpp  lvfs_core_IView.h  lvfs_core_IViewFactory.cpp  lvfs_core_IViewFactory.h
src/default/: lvfs_core_kde_DefaultNode.cpp  lvfs_core_kde_DefaultNode.cpp123  lvfs_core_kde_DefaultNode.h  lvfs_core_kde_DefaultView.cpp  lvfs_core_kde_DefaultView.cpp123  lvfs_core_kde_DefaultView.h  lvfs_core_qt_DefaultNode.cpp  lvfs_core_qt_DefaultNode.h  lvfs_core_qt_DefaultNodeFactory.cpp  lvfs_core_qt_DefaultNodeFactory.h  lvfs_core_qt_DefaultNodeViewFactory.cpp  lvfs_core_qt_DefaultNodeViewFactory.h  lvfs_core_qt_DefaultSortFilterModel.cpp  lvfs_core_qt_DefaultSortFilterModel.h  lvfs_core_qt_DefaultView.cpp  lvfs_core_qt_DefaultView.h  lvfs_core_qt_DefaultViewFactory.cpp  lvfs_core_qt_DefaultViewFactory.h  lvfs_core_qt_DefaultView_p.cpp  lvfs_core_qt_DefaultView_p.h
src/models/: lvfs_core_Node.cpp  lvfs_core_Node.h
src/models/kde/: lvfs_core_kde_INode.cpp  lvfs_core_kde_INode.h
src/models/qt/: lvfs_core_qt_BaseNode.cpp  lvfs_core_qt_BaseNode.h  lvfs_core_qt_INode.cpp  lvfs_core_qt_INode.h  lvfs_core_qt_IView.cpp  lvfs_core_qt_IView.h  lvfs_core_qt_ModelNode.cpp  lvfs_core_qt_ModelNode.h  lvfs_core_qt_Node.cpp  lvfs_core_qt_Node.h  lvfs_core_qt_SortFilterModel.cpp  lvfs_core_qt_SortFilterModel.h  lvfs_core_qt_StyledItemDelegate.cpp  lvfs_core_qt_StyledItemDelegate.h
src/models/qt/tasks/: lvfs_core_qt_BaseTask.cpp  lvfs_core_qt_BaseTask.h  lvfs_core_qt_CopyTask.cpp  lvfs_core_qt_CopyTask.h  lvfs_core_qt_FilesBaseTask.cpp  lvfs_core_qt_FilesBaseTask.h  lvfs_core_qt_RefreshTask.cpp  lvfs_core_qt_RefreshTask.h  lvfs_core_qt_RemoveTask.cpp  lvfs_core_qt_RemoveTask.h  lvfs_core_qt_Task.cpp  lvfs_core_qt_Task.h
src/models/qt/tasks/tools/: lvfs_core_qt_InteractiveEvents.cpp  lvfs_core_qt_InteractiveEvents.h  lvfs_core_qt_InteractiveTools.cpp  lvfs_core_qt_InteractiveTools.h  lvfs_core_qt_TaskProgress.cpp  lvfs_core_qt_TaskProgress.h  lvfs_core_qt_TaskProgressEvents.h  lvfs_core_qt_Tryier.h  lvfs_core_qt_taskdialog.cpp  lvfs_core_qt_taskdialog.h  lvfs_core_qt_taskprogress.cpp  lvfs_core_qt_taskprogress.h  lvfs_core_qt_taskprogressevents.h  lvfs_core_qt_userinputdialog.cpp  lvfs_core_qt_userinputdialog.h
src/plugin/: lvfs_core_Directory.cpp  lvfs_core_Directory.h  lvfs_core_Entry.cpp  lvfs_core_Entry.h  lvfs_core_File.cpp  lvfs_core_File.h  lvfs_core_Package.cpp  lvfs_core_Package.h  lvfs_core_Plugin.cpp  lvfs_core_Plugin.h
src/settings/: lvfs_core_settings_IntOption.cpp  lvfs_core_settings_IntOption.h  lvfs_core_settings_Listener.cpp  lvfs_core_settings_Listener.h  lvfs_core_settings_Option.cpp  lvfs_core_settings_Option.h  lvfs_core_settings_Page.cpp  lvfs_core_settings_Page.h  lvfs_core_settings_Scope.cpp  lvfs_core_settings_Scope.h  lvfs_core_settings_StringOption.cpp  lvfs_core_settings_StringOption.h
src/tools/events/: contextmenueventhandler.h  contextmenueventsource.h  eventhandler.cpp  eventhandler.h  eventhandlerbase.h  eventhandlerdefault.h  eventsourcebase.h  focuseventhandler.h  focuseventsource.h  keyboardeventhandler.h  keyboardeventsource.h  mouseeventhandler.h  mouseeventsource.h
src/tools/models/: lvfs_core_TreeModel.cpp  lvfs_core_TreeModel.h
src/tools/strings/: readableints.h  strnatcmp.h
src/tools/templates/: mtp.h  statemachine.h  uri.cpp  uri.h
src/tools/widgets/choosedialog/: lvfs_core_ChooseDialog.cpp  lvfs_core_ChooseDialog.h
src/tools/widgets/intdialog/: lvfs_core_IntDialog.cpp  lvfs_core_IntDialog.h
src/tools/widgets/nestedplaindialog/: lvfs_core_NestedPlainDialog.cpp  lvfs_core_NestedPlainDialog.h
src/tools/widgets/nestedplaindialog/widgets/: lvfs_core_BaseNestedWidget.cpp  lvfs_core_BaseNestedWidget.h  lvfs_core_NestedDialog.cpp  lvfs_core_NestedDialog.h  lvfs_core_NestedWidget.cpp  lvfs_core_NestedWidget.h
src/tools/widgets/stringdialog/: lvfs_core_ConfirmStringDialog.cpp  lvfs_core_ConfirmStringDialog.h  lvfs_core_StringDialog.cpp  lvfs_core_StringDialog.h  lvfs_core_ValidStringDialog.cpp  lvfs_core_ValidStringDialog.h
src/tools/widgets/valuedialog/: lvfs_core_ValueDialog.h
